test/error/parse/ExpectType.mod
MODULE ExpectType;
VAR x: ;
END ExpectType.
